crates/bevy_ecs/compile_fail/tests/ui/system_state_iter_mut_overlap_safety.stderr
error[E0502]: cannot borrow `query` as immutable because it is also borrowed as mutable
  --> tests/ui/system_state_iter_mut_overlap_safety.rs:LL:CC
   |
LL |         let mut_vec = query.iter_mut().collect::<Vec<bevy_ecs::prelude::Mut<A>>>();
   |                       ----- mutable borrow occurs here
...
LL |             query.iter().collect::<Vec<&A>>(),
   |             ^^^^^ immutable borrow occurs here
...
LL |             mut_vec.iter().map(|m| **m).collect::<Vec<A>>(),
   |             ------- mutable borrow later used here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0502`.
